# mapthing

./: .gitignore  .gitmodules  README.txt  alembic.ini  analysis.R  cli.py  conftest.py  development.ini  gpxutil.R  mapthing.wsgi  mergetracks.py  production.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.ini
MapThing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fixtures/: missedstop.csv  tiny.gpx
gpsdb/: point.py
mapthing/: __init__.py  __main__.py  analyze.py  analyze_text.py  conftest.py  gps_history.py  hashdeque.py  mapstyle.xml  models.py  section_timer.py  test_uploader.py  tests.py  uploader.py  views.py
mapthing/gps_history/: __init__.py  test.py
mapthing/gps_history/models/: __init__.py
mapthing/helpers/: analysis.py
mapthing/models/: __init__.py  analysis.py  base_model.py  location.py  point.py  source.py  stop.py
mapthing/scripts/: initializedb.py
mapthing/static/: bower.json  package.json
mapthing/static/css/: jquery.ui.timerange.css  view_track.css
mapthing/static/js/: jquery.ui.timerange.js  mapthing.js
mapthing/static/js/app/: app.js  controllers.js  directives.js  filters.js  services.js
mapthing/static/js/vue/: README.md  index.html  package.json  vite.config.ts
mapthing/templates/: get_track.pt  mapthing_test.html  mytemplate.pt  places.pt  sources.pt  summary.pt  view_track.pt
migrations/: env.py
migrations/versions/: 5d12d7f0c0f2_fix_track_created_type.py  6283d402f38d_initial_migration.py
trackedit/: __init__.py  history.py  ops.py  track.py
util/: pull_db.sh
(+14 files in other folders)
