[project]
name = "mapthing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi==2021.5.30",
    "chameleon==3.9.1",
    "gpxpy==1.4.2",
    "hupper==1.10.3",
    "latlon23==1.0.7",
    "mako==1.1.4",
    "markupsafe==2.0.1",
    "olefile==0.46",
    "paste==3.5.0",
    "pastedeploy==2.1.1",
    "plaster-pastedeploy==0.7",
    "plaster==1.0",
    "pygments==2.9.0",
    "pyproj>=3.7.0",
    "pyramid==1.10.8",
    "pyramid-chameleon==0.3",
    "pyramid-debugtoolbar==4.9",
    "pyramid-mako==1.1.0",
    "pyramid-tm==2.4",
    "pyshp==2.1.3",
    "python-dateutil==2.8.2",
    "pytz==2021.1",
    "repoze-lru==0.7",
    "six==1.16.0",
    "sqlalchemy==1.4.21",
    "transaction==3.0.1",
    "translationstring==1.4",
    "venusian==3.0.0",
    "waitress==2.0.0",
    "webob==1.8.7",
    "zope-deprecation==4.4.0",
    "zope-interface==5.4.0",
    "zope-sqlalchemy==1.5",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
